# lifetch-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/args/: mod.rs
src/builder/: mod.rs
src/config/: mod.rs
src/config/cache/: mod.rs
src/config/helio/: default.rs  mod.rs
src/data/: mod.rs
src/error/: mod.rs  stylize.rs
src/fetch/: cpu.rs  distro.rs  gpu.rs  memory.rs  mod.rs  packages.rs  shell.rs  terminal.rs  uptime.rs  user.rs
src/image/: default.rs  mod.rs
src/modules/: mod.rs  module.rs
src/platform/: arch.rs  mod.rs  name.rs  version.rs
src/random/: mod.rs
src/util/: constants.rs  data.rs  hyperstr.rs  mod.rs  mth.rs
src/util/terminal/: mod.rs  unicode.rs
src/util/unicode/: mod.rs  width.rs
src/variable/: creator.rs  iterator.rs  mod.rs
src/version/: mod.rs
src/welcome/: mod.rs
